--- a/01/hw-01.md
+++ b/01/hw-01.md
@@ -13,6 +13,19 @@
 2. Скачайте на свой ПК данный git репозиторий. Исходный код для выполнения задания расположен в директории **01/src**.
 3. Убедитесь, что в вашей ОС установлен docker.
 
+```
+[user@localhost src]$ terraform -v
+Terraform v1.4.6
+on linux_amd64
+
+Your version of Terraform is out of date! The latest version
+is 1.5.3. You can update by downloading from https://www.terraform.io/downloads.html
+
+[user@localhost src]$ docker -v
+Docker version 24.0.4, build 3713ee1
+
+```
+
 ------
 
 ### Инструменты и дополнительные материалы, которые пригодятся для выполнения задания
@@ -30,11 +43,55 @@
 Выполните команду ```terraform validate```. Объясните в чем заключаются намеренно допущенные ошибки? Исправьте их.
 5. Выполните код. В качестве ответа приложите вывод команды ```docker ps```
 6. Замените имя docker-контейнера в блоке кода на ```hello_world```, выполните команду ```terraform apply -auto-approve```.
-Объясните своими словами, в чем может быть опасность применения ключа  ```-auto-approve``` ? В качестве ответа дополнительно приложите вывод команды ```docker ps```
+7. Объясните своими словами, в чем может быть опасность применения ключа  ```-auto-approve``` ? В качестве ответа дополнительно приложите вывод команды ```docker ps```
 8. Уничтожьте созданные ресурсы с помощью **terraform**. Убедитесь, что все ресурсы удалены. Приложите содержимое файла **terraform.tfstate**. 
 9. Объясните, почему при этом не был удален docker образ **nginx:latest** ? Ответ подкрепите выдержкой из документации провайдера.
 
+```
+1. Скачал. git clone https://github.com/michail-77/ter-homeworks.git
+2. personal.auto.tfvars
+3. "result": "QIpNxJA3Hqmvc6Qf",
+4. Раскоментировал. найдено 3 ошибки.
+    resource "docker_image" {    # исправлено на resource "docker_image" "nginx"
+  name         = "nginx:latest"
+  keep_locally = true
+}
 
+resource "docker_container" "1nginx" { # исправлено на resource "docker_container" "nginx_1" {
+  image = docker_image.nginx.image_id
+  name  = "example_${random_password.random_string_fake.resuld}"    /* исправлено на  name  = "example_${random_password.random_string.result}" */
+
+  ports {
+    internal = 80
+    external = 8000
+  }
+}
+
+5. $ docker ps
+CONTAINER ID   IMAGE          COMMAND                  CREATED          STATUS          PORTS                  NAMES
+a55be0cbeae4   6efc10a0510f   "/docker-entrypoint.…"   22 seconds ago   Up 21 seconds   0.0.0.0:8000->80/tcp   example_QIpNxJA3Hqmvc6Qf
+
+6. Заменил, команду выполнил
+7. При выполнении команды с ключем ```-auto-approve``` подтверждение не требуется.
+   $ docker ps
+CONTAINER ID   IMAGE          COMMAND                  CREATED         STATUS         PORTS                  NAMES
+2f6734815d8b   6efc10a0510f   "/docker-entrypoint.…"   8 seconds ago   Up 8 seconds   0.0.0.0:8000->80/tcp   hello_world
+
+8. Удалил. (terraform destroy)
+    $ cat terraform.tfstate
+{
+  "version": 4,
+  "terraform_version": "1.4.6",
+  "serial": 18,
+  "lineage": "6b7df5b9-a164-8872-07cf-3abe2d19be6c",
+  "outputs": {},
+  "resources": [],
+  "check_results": null
+}
+
+9. keep_locally - (Необязательно, логическое значение) Если true, то образ Docker не будет удален при операции уничтожения. Если это ложь, он удалит изображение из локального хранилища докера при операции уничтожения.
+
+```
 ------
 
 ## Дополнительные задания (со звездочкой*)
