--- a/01/hw-01.md
+++ b/01/hw-01.md
@@ -57,9 +57,10 @@ Docker version 24.0.4, build 3713ee1
   keep_locally = true
 }
 
-resource "docker_container" "1nginx" { # исправлено на resource "docker_container" "nginx_1" {
+resource "docker_container" "1nginx" {   # исправлено на resource "docker_container" "nginx_1" {
   image = docker_image.nginx.image_id
-  name  = "example_${random_password.random_string_fake.resuld}"    /* исправлено на  name  = "example_${random_password.random_string.result}" */
+  name  = "example_${random_password.random_string_fake.resuld}"    /* исправлено на  name  = "example_$
+  {random_password.random_string.result}" */
 
   ports {
     internal = 80
