--- a/01/hw-01.md
+++ b/01/hw-01.md
@@ -48,19 +48,20 @@ Docker version 24.0.4, build 3713ee1
 9. Объясните, почему при этом не был удален docker образ **nginx:latest** ? Ответ подкрепите выдержкой из документации провайдера.
 
 ```
+### Ответ:
 1. Скачал. git clone https://github.com/michail-77/ter-homeworks.git
 2. personal.auto.tfvars
 3. "result": "QIpNxJA3Hqmvc6Qf",
 4. Раскоментировал. найдено 3 ошибки.
-    resource "docker_image" {    # исправлено на resource "docker_image" "nginx"
+    resource "docker_image" {    **# исправлено на resource "docker_image" "nginx"**
   name         = "nginx:latest"
   keep_locally = true
 }
 
-resource "docker_container" "1nginx" {   # исправлено на resource "docker_container" "nginx_1" {
+resource "docker_container" "1nginx" {   **# исправлено на resource "docker_container" "nginx_1" {**
   image = docker_image.nginx.image_id
-  name  = "example_${random_password.random_string_fake.resuld}"    /* исправлено на  name  = "example_$
-  {random_password.random_string.result}" */
+  name  = "example_${random_password.random_string_fake.resuld}"   ** /* исправлено на  name  = "example_$
+  {random_password.random_string.result}" */ **
 
   ports {
     internal = 80
