--- a/01/hw-01.md
+++ b/01/hw-01.md
@@ -53,7 +53,7 @@ Docker version 24.0.4, build 3713ee1
 2. personal.auto.tfvars
 3. "result": "QIpNxJA3Hqmvc6Qf",
 4. Раскоментировал. найдено 3 ошибки.
-    resource "docker_image" {    ### Colors # исправлено на resource "docker_image" "nginx" `#3285A8`
+    resource "docker_image" {    # исправлено на resource "docker_image" "nginx"
   name         = "nginx:latest"
   keep_locally = true
 }
