--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -35,13 +35,92 @@ https://console.cloud.yandex.ru/folders/<ваш cloud_id>/vpc/security-groups.
 - скриншот успешного подключения к консоли ВМ через ssh(к OS ubuntu необходимо подключаться под пользователем ubuntu: "ssh ubuntu@vm_ip_address"),
 - ответы на вопросы.
 
+### Ответ:
+
+1. Изуччл
+2. Перерменовал, заполнил данными.
+3. сгенерировал ssh-ключ
+4. выполнил. Потратил уйму времени, чтобы найти ошибку, в итоге скопировал из яндекс документации, все заработало.
+5. preemptible = true дает возможность останавливать наши ВМ, core_fraction=5 - указывать уровень производительности, что в итоге 
+помогают нам экономить денежные средства при обучении.
+
+[скриншот ЛК Yandex Cloud](https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_1_1.JPG)
+[еще один](https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_1_2.JPG)
+
+[подключения к консоли](https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_1_3.JPG)
 
 ### Задание 2
 
 1. Изучите файлы проекта.
 2. Замените все "хардкод" **значения** для ресурсов **yandex_compute_image** и **yandex_compute_instance** на **отдельные** переменные. К названиям переменных ВМ добавьте в начало префикс **vm_web_** .  Пример: **vm_web_name**.
-2. Объявите нужные переменные в файле variables.tf, обязательно указывайте тип переменной. Заполните их **default** прежними значениями из main.tf. 
-3. Проверьте terraform plan (изменений быть не должно). 
+3. Объявите нужные переменные в файле variables.tf, обязательно указывайте тип переменной. Заполните их **default** прежними значениями из main.tf. 
+4. Проверьте terraform plan (изменений быть не должно). 
+
+### Ответ:
+1. изучил
+2. ```
+data "yandex_compute_image" "ubuntu" {
+  family = var.vm_web_image_name
+}
+
+resource "yandex_compute_instance" "vm_web" {
+# name        = var.vm_web_vmname
+  name = "${ local.org }-${ local.project }-${ local.instance }-web"
+  platform_id = "standard-v1"
+  allow_stopping_for_update = true
+
+  resources {
+    cores  = var.vm_web_resources.cores
+    memory = var.vm_web_resources.memory
+    core_fraction = var.vm_web_resources.core_fraction
+  }
+
+  boot_disk {
+
+```
+3. ```
+###yandex_compute_image vars
+variable "vm_yc_image" {
+  type        = string
+  default     = "ubuntu-2004-lts"
+  description = "ubuntu"
+}
+
+###yandex_compute_instance vars
+
+variable "vm_web_vmname" {
+  type        = string
+  default     = "netology-develop-platform-web"
+  description = "vmname_web"
+}
+
+
+variable "vm_web_resources"{
+type = map
+default = {
+  cores = 2
+  memory = 1
+  core_fraction = 5
+}
+}
+
+variable "vm_db_vmname" {
+  type        = string
+  default     = "netology-develop-platform-db"
+  description = "vmname_db"
+}
+
+variable "vm_db_resources"{
+type = map
+default = {
+  cores = 2
+  memory = 2
+  core_fraction = 20
+}
+}
+```
+[Скриншот](https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_2_1.JPG)
+
 
 
 ### Задание 3
@@ -49,6 +128,9 @@ https://console.cloud.yandex.ru/folders/<ваш cloud_id>/vpc/security-groups.
 1. Создайте в корне проекта файл 'vms_platform.tf' . Перенесите в него все переменные первой ВМ.
 2. Скопируйте блок ресурса и создайте с его помощью вторую ВМ(в файле main.tf): **"netology-develop-platform-db"** ,  cores  = 2, memory = 2, core_fraction = 20. Объявите ее переменные с префиксом **vm_db_** в том же файле('vms_platform.tf').
 3. Примените изменения.
+
+### Ответ:
+[Скриншот](https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_3_1.JPG)
 
 
 ### Задание 4
@@ -58,6 +140,8 @@ https://console.cloud.yandex.ru/folders/<ваш cloud_id>/vpc/security-groups.
 
 В качестве решения приложите вывод значений ip-адресов команды ```terraform output```
 
+### Ответ:
+[Скриншот](https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_4_1.JPG)
 
 ### Задание 5
 
@@ -65,6 +149,30 @@ https://console.cloud.yandex.ru/folders/<ваш cloud_id>/vpc/security-groups.
 2. Замените переменные с именами ВМ из файла variables.tf на созданные вами local переменные.
 3. Примените изменения.
 
+### Ответ:
+```
+locals {
+  org      = "netology"
+  project  = "develop"
+  instance = "platform"
+}
+```
+
+```
+esource "yandex_compute_instance" "vm_web" {
+# name        = var.vm_web_vmname
+  name = "${ local.org }-${ local.project }-${ local.instance }-web"
+  platform_id = "standard-v1"
+  allow_stopping_for_update = true
+
+
+resource "yandex_compute_instance" "vm_db" {
+# name        = var.vm_db_vmname
+  name = "${ local.org }-${ local.project }-${ local.instance }-db"
+  platform_id = "standard-v1"
+  allow_stopping_for_update = true
+
+```
 
 ### Задание 6
 
@@ -72,6 +180,10 @@ https://console.cloud.yandex.ru/folders/<ваш cloud_id>/vpc/security-groups.
 2. Так же поступите с блоком **metadata {serial-port-enable, ssh-keys}**, эта переменная должна быть общая для всех ваших ВМ.
 3. Найдите и удалите все более не используемые переменные проекта.
 4. Проверьте terraform plan (изменений быть не должно).
+
+
+### Ответ:
+
 
 ------
 
