--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -173,6 +173,7 @@ resource "yandex_compute_instance" "vm_db" {
   allow_stopping_for_update = true
 
 ```
+[Скриншот](https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_5_1.JPG)
 
 ### Задание 6
 
@@ -183,8 +184,100 @@ resource "yandex_compute_instance" "vm_db" {
 
 
 ### Ответ:
+```
+vms_platform.tf
+
+##yandex_compute_instance vars
+
+variable "vm_web_vmname" {
+  type        = string
+  default     = "netology-develop-platform-web"
+  description = "vmname_web"
+}
 
 
+variable "vm_web_resources"{
+type = map
+default = {
+  cores = 2
+  memory = 1
+  core_fraction = 5
+}
+}
+
+variable "vm_db_vmname" {
+  type        = string
+  default     = "netology-develop-platform-db"
+  description = "vmname_db"
+}
+
+variable "vm_db_resources"{
+type = map
+default = {
+  cores = 2
+  memory = 2
+  core_fraction = 20
+}
+}
+
+main.tf
+
+resource "yandex_compute_instance" "vm_web" {
+# name        = var.vm_web_vmname
+  name = "${ local.org }-${ local.project }-${ local.instance }-web"
+  platform_id = "standard-v1"
+  allow_stopping_for_update = true
+
+  resources {
+    cores  = var.vm_web_resources.cores
+    memory = var.vm_web_resources.memory
+    core_fraction = var.vm_web_resources.core_fraction
+  }
+
+resource "yandex_compute_instance" "vm_db" {
+# name        = var.vm_db_vmname
+  name = "${ local.org }-${ local.project }-${ local.instance }-db"
+  platform_id = "standard-v1"
+  allow_stopping_for_update = true
+
+  resources {
+    cores  = var.vm_db_resources.cores
+    memory = var.vm_db_resources.memory
+    core_fraction = var.vm_db_resources.core_fraction
+  }
+```
+
+```
+vms_platform.tf
+
+variable auth-ssh {
+  type = map
+  default = {
+   serial-port-enable = 1 
+   ssh-keys = "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQAB..........7+rpzNdyrd/ENdUvPBRzx user@localhost.localdomain"
+  }
+}
+
+main.tf
+
+metadata  =  var.auth-ssh
+
+```
+```
+[user@localhost src]$ terraform plan
+data.yandex_compute_image.ubuntu: Reading...
+yandex_vpc_network.develop: Refreshing state... [id=enpufh6g7t2kbjc9jlhc]
+data.yandex_compute_image.ubuntu: Read complete after 1s [id=fd85f37uh98ldl1omk30]
+yandex_vpc_subnet.develop: Refreshing state... [id=e9bgvpdmt2pbcc47olo5]
+yandex_compute_instance.vm_web: Refreshing state... [id=fhm5pnm5mgpt6t6vhmbc]
+yandex_compute_instance.vm_db: Refreshing state... [id=fhmp8014n1h5pu919d44]
+
+No changes. Your infrastructure matches the configuration.
+
+Terraform has compared your real infrastructure against your configuration and found no differences, so no changes are needed.
+[user@localhost src]$ 
+
+```
 ------
 
 ## Дополнительные задания (со звездочкой*)
