--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -44,7 +44,7 @@ https://console.cloud.yandex.ru/folders/<ваш cloud_id>/vpc/security-groups.
 5. preemptible = true дает возможность останавливать наши ВМ, core_fraction=5 - указывать уровень производительности, что в итоге 
 помогают нам экономить денежные средства при обучении.
 
-[скриншот ЛК Yandex Cloud](https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_1_1.JPG)  
+<img.src="https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_1_1.JPG" alt="02.1.1"> 
 
 [еще один](https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_1_2.JPG)
 
