--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -46,9 +46,10 @@ https://console.cloud.yandex.ru/folders/<ваш cloud_id>/vpc/security-groups.
 
 <img src="https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_1_1.JPG" alt="02.1.1"> 
 
-[еще один](https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_1_2.JPG)
+<img src="https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_1_2.JPG" alt="02.1.2"> 
 
-[подключения к консоли](https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_1_3.JPG)
+<img src="https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_1_3.JPG" alt="02.1.3"> 
+
 
 ### Задание 2
 
