--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -123,9 +123,8 @@ default = {
 }
 }
 ```
-[Скриншот](https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_2_1.JPG)
 
-
+<img src="https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_2_1.JPG" alt="02.2.1"> 
 
 ### Задание 3
 
@@ -134,8 +133,8 @@ default = {
 3. Примените изменения.
 
 ### Ответ:
-[Скриншот](https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_3_1.JPG)
 
+<img src="https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_3_1.JPG" alt="02.3.1"> 
 
 ### Задание 4
 
@@ -145,7 +144,8 @@ default = {
 В качестве решения приложите вывод значений ip-адресов команды ```terraform output```
 
 ### Ответ:
-[Скриншот](https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_4_1.JPG)
+
+<img src="https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_4_1.JPG" alt="02.4.1"> 
 
 ### Задание 5
 
@@ -177,7 +177,8 @@ resource "yandex_compute_instance" "vm_db" {
   allow_stopping_for_update = true
 
 ```
-[Скриншот](https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_5_1.JPG)
+
+<img src="https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_5_1.JPG" alt="02.5.1"> 
 
 ### Задание 6
 
