--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -155,11 +155,7 @@ default = {
 
 ### Ответ:
 ```
-locals {
-  org      = "netology"
-  project  = "develop"
-  instance = "platform"
-}
+[код](https://github.com/michail-77/ter-homeworks/blob/main/02/src/locals.tf)
 ```
 
 ```
