--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -155,7 +155,7 @@ default = {
 
 ### Ответ:
 
-[код](https://github.com/michail-77/ter-homeworks/blob/main/02/src/locals.tf)
+[locals.tf](https://github.com/michail-77/ter-homeworks/blob/main/02/src/locals.tf)
 
 
 ```
