--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -157,22 +157,7 @@ default = {
 
 [locals.tf](https://github.com/michail-77/ter-homeworks/blob/main/02/src/locals.tf)
 
-
-```
-esource "yandex_compute_instance" "vm_web" {
-# name        = var.vm_web_vmname
-  name = "${ local.org }-${ local.project }-${ local.instance }-web"
-  platform_id = "standard-v1"
-  allow_stopping_for_update = true
-
-
-resource "yandex_compute_instance" "vm_db" {
-# name        = var.vm_db_vmname
-  name = "${ local.org }-${ local.project }-${ local.instance }-db"
-  platform_id = "standard-v1"
-  allow_stopping_for_update = true
-
-```
+[main.tf](https://github.com/michail-77/ter-homeworks/blob/main/02/src/main.tf)
 
 <img src="https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_5_1.JPG" alt="02.5.1"> 
 
