--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -60,69 +60,10 @@ https://console.cloud.yandex.ru/folders/<ваш cloud_id>/vpc/security-groups.
 
 ### Ответ:
 1. изучил
-2. 
-```
-data "yandex_compute_image" "ubuntu" {
-  family = var.vm_web_image_name
-}
+2.  [main.tf](https://github.com/michail-77/ter-homeworks/blob/main/02/src/main.tf)
 
-resource "yandex_compute_instance" "vm_web" {
-# name        = var.vm_web_vmname
-  name = "${ local.org }-${ local.project }-${ local.instance }-web"
-  platform_id = "standard-v1"
-  allow_stopping_for_update = true
+3.  [vms_platform.tf](https://github.com/michail-77/ter-homeworks/blob/main/02/src/vms_platform.tf)
 
-  resources {
-    cores  = var.vm_web_resources.cores
-    memory = var.vm_web_resources.memory
-    core_fraction = var.vm_web_resources.core_fraction
-  }
-
-  boot_disk {
-
-```
-3. 
-```
-###yandex_compute_image vars
-variable "vm_yc_image" {
-  type        = string
-  default     = "ubuntu-2004-lts"
-  description = "ubuntu"
-}
-
-###yandex_compute_instance vars
-
-variable "vm_web_vmname" {
-  type        = string
-  default     = "netology-develop-platform-web"
-  description = "vmname_web"
-}
-
-
-variable "vm_web_resources"{
-type = map
-default = {
-  cores = 2
-  memory = 1
-  core_fraction = 5
-}
-}
-
-variable "vm_db_vmname" {
-  type        = string
-  default     = "netology-develop-platform-db"
-  description = "vmname_db"
-}
-
-variable "vm_db_resources"{
-type = map
-default = {
-  cores = 2
-  memory = 2
-  core_fraction = 20
-}
-}
-```
 
 <img src="https://github.com/michail-77/ter-homeworks/blob/main/02/src/image/hw-02_2_1.JPG" alt="02.2.1"> 
 
@@ -170,85 +111,12 @@ default = {
 
 
 ### Ответ:
-```
-vms_platform.tf
 
-##yandex_compute_instance vars
+[vms_platform.tf](https://github.com/michail-77/ter-homeworks/blob/main/02/src/vms_platform.tf)
 
-variable "vm_web_vmname" {
-  type        = string
-  default     = "netology-develop-platform-web"
-  description = "vmname_web"
-}
+[main.tf](https://github.com/michail-77/ter-homeworks/blob/main/02/src/main.tf)
 
 
-variable "vm_web_resources"{
-type = map
-default = {
-  cores = 2
-  memory = 1
-  core_fraction = 5
-}
-}
-
-variable "vm_db_vmname" {
-  type        = string
-  default     = "netology-develop-platform-db"
-  description = "vmname_db"
-}
-
-variable "vm_db_resources"{
-type = map
-default = {
-  cores = 2
-  memory = 2
-  core_fraction = 20
-}
-}
-
-main.tf
-
-resource "yandex_compute_instance" "vm_web" {
-# name        = var.vm_web_vmname
-  name = "${ local.org }-${ local.project }-${ local.instance }-web"
-  platform_id = "standard-v1"
-  allow_stopping_for_update = true
-
-  resources {
-    cores  = var.vm_web_resources.cores
-    memory = var.vm_web_resources.memory
-    core_fraction = var.vm_web_resources.core_fraction
-  }
-
-resource "yandex_compute_instance" "vm_db" {
-# name        = var.vm_db_vmname
-  name = "${ local.org }-${ local.project }-${ local.instance }-db"
-  platform_id = "standard-v1"
-  allow_stopping_for_update = true
-
-  resources {
-    cores  = var.vm_db_resources.cores
-    memory = var.vm_db_resources.memory
-    core_fraction = var.vm_db_resources.core_fraction
-  }
-```
-
-```
-vms_platform.tf
-
-variable auth-ssh {
-  type = map
-  default = {
-   serial-port-enable = 1 
-   ssh-keys = "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQAB..........7+rpzNdyrd/ENdUvPBRzx user@localhost.localdomain"
-  }
-}
-
-main.tf
-
-metadata  =  var.auth-ssh
-
-```
 ```
 [user@localhost src]$ terraform plan
 data.yandex_compute_image.ubuntu: Reading...
