--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -37,10 +37,10 @@ https://console.cloud.yandex.ru/folders/<ваш cloud_id>/vpc/security-groups.
 
 ### Ответ:
 
-1. Изуччл
-2. Перерменовал, заполнил данными.
+1. Изучил
+2. Переименовал, заполнил данными.
 3. сгенерировал ssh-ключ
-4. выполнил. Потратил уйму времени, чтобы найти ошибку, в итоге скопировал из яндекс документации, все заработало.
+4. Выполнил. Потратил уйму времени, чтобы найти ошибку, в итоге скопировал из яндекс документации, все заработало.
 5. preemptible = true дает возможность останавливать наши ВМ, core_fraction=5 - указывать уровень производительности, что в итоге 
 помогают нам экономить денежные средства при обучении.
 
